test/netlist/error/memory-too-long.bop
RAM r (0, 5) = text { 000|101 }

Main() = ()
where
end where;
